# Obsidian-Spec-MCP

./: .gitignore  README.md  pyproject.toml  test_debug_tools.py
examples/: claude_desktop_config.json
examples/runtime_configs/: docxer.json  js_engine.json  linter.json  meta_bind.json  profile_overlay.json  quickadd.json  tasks.json  templater.json
obsidian_spec_mcp/: __init__.py  config.py  models.py  registry.py  renderers.py  server.py  validators.py
obsidian_spec_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
obsidian_spec_mcp/docs/: __init__.py  core.md  datacore.md  dataview.md  docxer.md  js_engine.md  linter.md  mermaid.md  meta_bind.md  quickadd.md  styling.md  tasks.md  templater.md
obsidian_spec_mcp/profiles/: __init__.py  default_profile.json
tests/: test_config.py  test_debug_functionality.py  test_gauntlet.py  test_integration.py  test_mermaid.py  test_registry.py  test_renderers.py  test_server.py  test_validators.py
tests/fixtures/: mermaid_bad_flowchart.md
tests/fixtures/vault/core/: Broken Core Note.md  Valid Core Note.md
tests/fixtures/vault/cross_pack/: Core Tasks Linter.md  Tasks and Linter.md  Templater and Linter.md
tests/fixtures/vault/docxer/: Broken Docxer Note.md  Valid Docxer Note.md
tests/fixtures/vault/integration_output/: Generated Tasks Note.md
tests/fixtures/vault/js_engine/: Broken JS Engine Note.md  Valid JS Engine Note.md
tests/fixtures/vault/linter/: Broken Linter Note.md  Valid Linter Note.md
tests/fixtures/vault/meta_bind/: Broken Meta Bind Note.md  (+1 more)
(+6 files in other folders)
